--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,19 @@
+# Existing dependencies
+numpy
+pandas
+rasterio
+geopandas
+matplotlib
+folium
+
+# Missing dependencies causing import failures
+kneed>=0.7.0              # For modeling module
+scipy>=1.7.0              # For prediction module (scipy.interpolation)
+scikit-image>=0.18.0      # For segmentation module
+scikit-learn>=1.0.0       # For modeling module
+xarray>=0.20.0            # For data handling
+
+
 # Core dependencies
 numpy>=1.21.0
 pandas>=1.3.0
@@ -61,3 +77,4 @@ pre-commit>=2.15.0
 sphinx>=4.0.0
 sphinx-rtd-theme>=1.0.0
 myst-parser>=0.15.0
+
