--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,24 @@
-# Existing dependencies
-numpy
-pandas
-rasterio
-geopandas
-matplotlib
-folium
+# Core scientific computing
+numpy>=1.21.0
+pandas>=1.3.0
+scipy>=1.7.0  # CRITICAL: Was missing, needed for prediction module
 
-# Missing dependencies causing import failures
-kneed>=0.7.0              # For modeling module
-scipy>=1.7.0              # For prediction module (scipy.interpolation)
-scikit-image>=0.18.0      # For segmentation module
-scikit-learn>=1.0.0       # For modeling module
-xarray>=0.20.0            # For data handling
+# Machine learning
+scikit-learn>=1.0.0
+scikit-image>=0.18.0  # CRITICAL: Needed for segmentation
 
+# Geospatial
+rasterio>=1.2.0
+geopandas>=0.10.0
+shapely>=1.7.0
+
+# Image processing 
+opencv-python>=4.5.0  # For segmentation module
+Pillow>=8.3.0
+
+# Additional missing dependencies
+kneed>=0.7.0  # For modeling optimization
+xarray>=0.20.0  # For data handling
 
 # Core dependencies
 numpy>=1.21.0
@@ -77,4 +83,3 @@ pre-commit>=2.15.0
 sphinx>=4.0.0
 sphinx-rtd-theme>=1.0.0
 myst-parser>=0.15.0
-
